# jetson-local-voice

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.rk3576  Dockerfile.rpi  Dockerfile.slim  Dockerfile.slim.qwen3  Dockerfile.update  Dockerfile.v34  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: README.md  pyproject.toml
agent/apps/companion_robot/: README.md  __init__.py  app.py  config.yaml
agent/apps/dialogue/: app.py
agent/apps/multi_mode/: __init__.py  app.py  config.yaml
agent/docs/: E2E_TEST_FRAMEWORK_PLAN.md  extending_with_custom_modes.md
agent/openvoicestream_agent/: app_base.py  app_mode.py  audio_io.py  cli.py  config.py  plugin.py  session.py  slv_client.py  state.py  vad.py  wake_source.py
agent/openvoicestream_agent/llm/: __init__.py  base.py  edge_llm.py  openai_compat.py
agent/openvoicestream_agent/modes/: __init__.py  chat.py  interpreter.py  monologue.py  transcribe.py
agent/openvoicestream_agent/plugins/: debug_dashboard.py  llm_availability.py
agent/openvoicestream_agent/plugins/static/: dashboard.css  dashboard.html  dashboard.js
agent/openvoicestream_agent/wake_sources/: __init__.py  http.py  stub_ext.py
agent/tests/: conftest.py  test_a3_a4_no_double_retry.py  test_companion_robot.py  test_dashboard_api.py  test_dashboard_double_start.py  test_dashboard_llm_health.py  test_dashboard_v2.py  test_debug_dashboard.py  test_dialogue_app.py  test_dispatch_concurrency.py  test_e2e_orin.py  test_llm_availability.py  test_llm_availability_probe_guard.py  test_llm_cache_metrics.py  test_llm_failure_broadcast.py  test_llm_retry.py  test_llm_timeout.py  test_llm_unavailable_fail_fast.py  test_mode_overrides_api.py  test_modes.py  test_pipeline_modes.py  test_prefix_cache_fallback.py  test_session_trim.py  test_state_machine.py  test_stop_intent.py  test_vad.py
agent/tests/e2e/: conftest.py  fake_audio.py  mock_llm_server.py  probe.py  test_always_on_unchanged.py  test_barge_in.py  test_dashboard_ui.py  test_empty_final.py  test_idle_stability.py  test_llm_resilience.py  test_mode_switch.py  test_multi_turn.py  test_prompt_editor.py  test_push_to_talk.py  test_reconnect.py  test_single_turn.py  test_sleep_drops_late_events.py  test_slv_error_recovery.py  test_stop_intent.py  test_wake_word.py
app/: asr_backend.py  asr_service.py  main.py  model_downloader.py  profile_loader.py  requirements.txt  streaming_asr_service.py  tts_backend.py  tts_service.py  vc_service.py
app/backends/: matcha_trt.py  paraformer_trt.py  qwen3_asr.py  qwen3_trt.py  sherpa.py  sherpa_asr.py  trt_edge_llm_asr.py  trt_edge_llm_ipc.py  trt_edge_llm_tts.py
app/core/: asr_backend.py  engine_resolver.py  hf_artifacts.py  language.py  model_downloader.py  profile_loader.py  profile_selector.py  rk_artifacts.py  rk_runtime.py  tts_backend.py  tts_service.py  v2v.py  vad.py
app/tests/: conftest.py  test_asr_stream_protocol.py  test_backend_factory.py  test_engine_resolver.py  test_multi_utterance.py  test_offline_final_text.py  test_paraformer_decode.py  test_qwen3_asr_stream_final_mode.py  test_qwen3_stream.py  test_qwen3_stream_dedup.py  test_rk_artifacts_contract.py  test_rk_profile_streaming_mode.py  test_sherpa_stream.py  test_trt_edge_llm_asr.py  test_trt_edge_llm_ipc_paths.py  test_trt_edge_llm_tts.py  test_trt_edge_llm_v2v_hardware.py  test_tts_language.py
app/utils/: whisper_mel.py
archive/2026-05/: README.md
archive/tmp-qwen3-2026-05-10/: README.md
artifacts/: MANIFEST.md
bench/: product_eval.py  rpi_bench.py
bench/calib/: gen_calib_data.py
bench/perf/: README.md  client.py  measure_v2v_unified.py  perf.py  run_on_device.sh  runners.py  stats.py
benchmark/: PROGRESS.md  RESULTS.md  _check_onnx_inputs.py  asr_qwen3_ort.py  asr_qwen3_trt.py  bench_baseline.py  bench_cpp.sh  bench_decode_loop.py  bench_diagnose.py  bench_fp16.py  bench_iobinding.py  bench_onnx.py  bench_sherpa.sh  build_asr_bf16_engine.sh  build_cp_bf16.py  build_cp_int8.py  build_cp_mixed.py  build_cp_single_head.py  convert_fp16_jetson.py  convert_local.py  convert_models.py  convert_rknn.py  debug_int8_cp.py  download_gguf.py  download_int8.py  e2e_tts.py  export_asr_encoder_trt.sh  export_cp_unified.py  export_cp_unified_v3.py  export_prefill_decode.py  export_qwen3_asr.py  export_qwen3_asr_unified.py  export_sherpa_style.py  export_talker_no_if.py  export_with_kv.py  extract_cp_embed_table.py  matmul_bench.c  profile_cp_trt.py  run_all.sh  test_all_fp32.py  (+11 more)
benchmark/cpp/: CMakeLists.txt  asr_pipeline.cpp  asr_pipeline.h  build.sh  cp_sample_kernel.h  json_minimal.h  main.cpp  tts_binding.cpp  tts_ort_models.cpp  tts_ort_models.h  tts_pipeline.cpp  tts_pipeline.h  tts_trt_engine.cpp  tts_trt_engine.h
benchmark/vocab-pruning/: inspect_onnx.py
benchmarks/: test_f5tts_ttft.py  test_matcha_ttft.py
benchmarks/archive/: decompose_fused_ops.py  (+2 more)
deploy/: docker-compose.radxa.yml  docker-compose.rk.yml  docker-compose.yml  install.sh  jetson-release-highperf.sh  roundtrip_verify.py  verify.sh
docs/: handover-trt-conversion.md  perf-test-runbook.md  performance-comparison.html  performance-comparison.md  productization-status.md  qwen3tts-accurate-branch-2026-05-07.md  rk-matcha-closed-loop-issue.md  rk3576-adaptation-plan.md  rknn-guide-zhihu.md  trt-reproduction-guide.md  trt103-myelin-bug-postmortem.md  voice-solution-lineup.html  设备选型指南.md
examples/: README.md  stream_tts_to_wav.py  v2v_tts_only.py
native/edgellm_voice_worker/: CMakeLists.txt  README.md  qwen3_tts_worker.cpp
rk3576/: Dockerfile  LESSONS.md  PLAN-code-predictor-unroll.md  README.md  STATUS.md  deploy.sh  docker-compose.yml
scripts/: build_engine_bundle.py  build_paraformer_trt.sh  build_tts_cp_engine.sh  diag_2x2.py  insert_qwen3_tts_cp_mlp_plugin.py  run_qwen3_tts_worker_smoke.py  validate_qwen3_tts_quality_gate.py  verify_product_explicit_kv_tts.py  verify_qwen3_tts_asr_roundtrip.py  verify_qwen3_tts_contract.py
tests/: test_qwen3_asr_stream.py  test_streaming_asr.py  test_streaming_asr_e2e.py  test_v2v_latency.py  test_vocab_pruning_indirection.py
(+194 files in other folders)
