[project]
name = "openvoicestream-agent"
version = "0.1.0"
description = "Agent-layer client that wires OpenVoiceStream (SLV /v2v/stream) to an OpenAI-compatible LLM."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "websockets>=12",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "openai>=1.40",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
silero = [
    "silero-vad>=5.1",
    "torch>=2.0",
]
e2e = [
    "pytest-asyncio>=0.21",
    "pytest-playwright>=0.4",
    "aiohttp>=3.9",
]

[project.scripts]
ovs-agent = "openvoicestream_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openvoicestream_agent", "apps"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
